--- a/templates/org_base.html
+++ b/templates/org_base.html
@@ -22,42 +22,32 @@
         <div class="header2 header">
 
             {% if request.user.is_authenticated %}
-                <div class="top">
-                <div class="wp">
-                <div class="fl"><p>服务电话：<b>33333333</b></p>
-                </div>
                 <div class="personal">
                     <dl class="user fr">
-                        <dd>admin@admin.com<img class="down fr" src="/static/images/top_down.png"/></dd>
-                        <dt><img width="20" height="20" src="/static/media/image/2016/12/default_big_14.png"/>
-                        </dt>
+                        <dd>{{ user.name }}<img class="down fr" src="{% static 'images/top_down.png' %}"/></dd>
+                        <dt><img width="20" height="20" src="{{ MEDIA_URL }}{{ request.user.image }}"/></dt>
                     </dl>
                     <div class="userdetail">
                         <dl>
-                            <dt><img width="80" height="80"
-                                     src="/static/media/image/2016/12/default_big_14.png"/>
-                            </dt>
+                            <dt><img width="80" height="80" src="{{ MEDIA_URL }}{{ request.user.image }}"/></dt>
                             <dd>
-                                <h2>管理员</h2>
-                                <p>admin@admin.com</p>
+                                <h2>{{ request.user.nick_name }}</h2>
+                                <p>{{ request.user.username }}</p>
                             </dd>
                         </dl>
                         <div class="btn">
-                            <a class="personcenter fl" href="usercenter-info.html">进入个人中心</a>
-                            <a class="fr" href="/logout/">退出</a>
+                            <a class="personcenter fl" href="{% url 'users:user_info' %}">进入个人中心</a>
+                            <a class="fr" href="">退出</a>
                         </div>
                     </div>
                 </div>
+                <a href="usercenter-message.html">
+                    <div class="msg-num"><span id="MsgNum">0</span></div>
+                </a>
+
             {% else %}
-                <div class="top">
-                    <div class="wp">
-                        <div class="fl">
-                            <p>服务电话：<b>33333333</b></p>
-                        </div>
-                        <a style="color:white" class="fr registerbtn" href="{% url 'register' %}">注册</a>
-                        <a style="color:white" class="fr loginbtn" href="{% url 'login' %}">登录</a>
-                    </div>
-                </div>
+                <a style="color:white" class="fr registerbtn" href="{% url 'register' %}">注册</a>
+                <a style="color:white" class="fr loginbtn" href="{% url 'login' %}">登录</a>
             {% endif %}
 
 
