--- a/templates/teachers-list.html
+++ b/templates/teachers-list.html
@@ -18,18 +18,18 @@
                 <div class="butler_list layout">
                     <div class="head">
                         <ul class="fl tab_header">
-                            <li class="active"><a href="?sort=">全部</a></li>
-                            <li><a href="?sort=hot">人气 &#8595;</a></li>
+                            <li {% if sort == '' %}class="active"{% endif %}><a href="?sort=">全部</a></li>
+                            <li {% if sort == 'hot' %}class="active"{% endif %}><a href="?sort=hot">人气 &#8595;</a></li>
                         </ul>
-                        <div class="fr butler-num">共<span class="key">9</span>人&nbsp;&nbsp;&nbsp;</div>
+                        <div class="fr butler-num">共<span class="key">{{ teacher_nums }}</span>人&nbsp;&nbsp;&nbsp;</div>
                     </div>
-                    {% for teacher in all_teachers %}
+                    {% for teacher in all_teachers.object_list %}
                         <dl class="des">
                             <dt>
-                                <a href="/org/teacher/detail/1/">
+                                <a href="{% url 'org:teacher_detail' teacher.id %}">
                                     <div class="picpic">
                                         <img width="100" height="100" class="scrollLoading"
-                                             src="{{ MEDIA_URL }}{{ teacher.image  }}"/>
+                                             src="{{ MEDIA_URL }}{{ teacher.image }}"/>
                                     </div>
                                 </a>
                             <div class="btn">
@@ -44,74 +44,65 @@
                             </div>
                             </dt>
                             <dd>
-                                <a href="/org/teacher/detail/1/">
+                                <a href="{% url 'org:teacher_detail' teacher.id %}">
                                     <h1>{{ teacher.name }}<span class="key picbig">金牌讲师</span></h1>
                                 </a>
                                 <ul class="cont">
-                                    <li>工作年限：<span>{{ teacher.work_years }}</span></li>
+                                    <li>工作年限：<span>{{ teacher.work_years }}年</span></li>
                                     <li>工作职位：<span>{{ teacher.work_position }}</span></li>
                                     <li>就职公司：<span>{{ teacher.work_company }}&nbsp;</span></li>
-                                    <li>年龄：<span>{{ teacher.ag }}岁</span></li>
-                                    <li>教学特点：<span>xxx</span></li>
+                                    <li>年龄：<span>{{ teacher.age }}岁</span></li>
+                                    <li>教学特点：<span>{{ teacher.points }}</span></li>
                                 </ul>
                             </dd>
-                            <a class="buy buyservice" href="/org/teacher/detail/1/"><br/>查看<br/>详情</a>
+                            <a class="buy buyservice" href="{% url 'org:teacher_detail' teacher.id %}"><br/>查看<br/>详情</a>
                         </dl>
                     {% endfor %}
 
                 </div>
                 <div class="pageturn">
                     <ul class="pagelist">
+                        {% if all_teachers.has_previous %}
+                            <li class="long"><a href="?{{ all_teachers.previous_page_number.querystring }}">上一页</a></li>
+                        {% endif %}
 
-
-                        <li class="active"><a href="?page=1">1</a></li>
-
-
-                        <li><a href="?page=2" class="page">2</a></li>
-
-
-                        <li class="long"><a href="?page=2">下一页</a></li>
-
+                        {% for page in all_teachers.pages %}
+                            {% if page %}
+                                {% ifequal page all_teachers.number %}
+                                    <li class="active"><a href="?{{ page.querystring }}">{{ page }}</a></li>
+                                {% else %}
+                                    <li><a href="?{{ page.querystring }}" class="page">{{ page }}</a></li>
+                                {% endifequal %}
+                            {% else %}
+                                <li class="none"><a href="">...</a></li>
+                            {% endif %}
+                        {% endfor %}
+                        {% if all_teachers.has_next %}
+                            <li class="long"><a href="?{{ all_teachers.next_page_number.querystring }}">下一页</a></li>
+                        {% endif %}
 
                     </ul>
                 </div>
             </div>
             <div class="right layout">
                 <div class="head">讲师排行榜</div>
-
-                <dl class="des">
-                    <span class="num fl">1</span>
-                    <a href="/diary/hk_detail/6/">
-                        <dt>
-                            <img width="50" height="50" class="scrollLoading"
-                                 src="../media/teacher/2016/11/aobama_CXWwMef.png"/>
-                        </dt>
-                    </a>
-                    <dd>
+                {% for hot_teacher in sorted_teachers %}
+                    <dl class="des">
+                        <span class="num fl">1</span>
                         <a href="/diary/hk_detail/6/">
-                            <h1 title="bobby">bobby</h1>
+                            <dt>
+                                <img width="50" height="50" class="scrollLoading"
+                                     src="{{ MEDIA_URL }}{{ hot_teacher.image }}"/>
+                            </dt>
                         </a>
-                        <p>工作年限：<span>5年</span></p>
-                    </dd>
-                </dl>
-
-                <dl class="des">
-                    <span class="num fl">1</span>
-                    <a href="/diary/hk_detail/6/">
-                        <dt>
-                            <img width="50" height="50" class="scrollLoading"
-                                 src="../media/teacher/2016/11/aobama.png"/>
-                        </dt>
-                    </a>
-                    <dd>
-                        <a href="/diary/hk_detail/6/">
-                            <h1 title="还是bobby">还是bobby</h1>
-                        </a>
-                        <p>工作年限：<span>5年</span></p>
-                    </dd>
-                </dl>
-
-
+                        <dd>
+                            <a href="/diary/hk_detail/6/">
+                                <h1 title="{{ hot_teacher.name }}">{{ hot_teacher.name }}</h1>
+                            </a>
+                            <p>工作年限：<span>{{ hot_teacher.work_years }}</span></p>
+                        </dd>
+                    </dl>
+                {% endfor %}
             </div>
         </div>
     </section>
