--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
                         </div>
                     </div>
                     <a href="usercenter-message.html">
-                        <div class="msg-num"><span id="MsgNum">0</span></div>
+                        <div class="msg-num"><span id="MsgNum">{{ request.user.unread_nums }}</span></div>
                     </a>
 
                     {% else %}
