--- a/templates/org-detail-homepage.html
+++ b/templates/org-detail-homepage.html
@@ -5,14 +5,14 @@
     <div class="right companycenter layout grouping">
         <div class="head">
             <h1>全部课程</h1>
-            <a class="green fr more" href="org-detail-course.html">查看更多 > </a>
+            <a class="green fr more" href="{% url 'org:org_course' course_org.id %}">查看更多 > </a>
         </div>
         <div class="brief group_list">
             {% for course in all_courses %}
                 <div class="module1_5 box">
-                    <a href="course-detail.html"><img width="214" src="{{ MEDIA_URL }}{{ course.image }}"/></a>
+                    <a href="{% url 'course:course_detail' course.id %}"><img width="214" src="{{ MEDIA_URL }}{{ course.image }}"/></a>
                     <div class="des">
-                        <a href="course-detail.html"><h2>{{ course.name }}</h2></a>
+                        <a href="{% url 'course:course_detail' course.id %}"><h2>{{ course.name }}</h2></a>
                         <span class="fl">课时：<i class="key">{{ course.learned_times }}</i></span>
                         <span class="fr">参加人数：{{ course.students }}</span>
                     </div>
@@ -30,14 +30,14 @@
     <div class="right companycenter layout">
         <div class="head">
             <h1>机构教师</h1>
-            <a class="green fr more" href="org-detail-teachers.html">查看更多 > </a>
+            <a class="green fr more" href="{% url 'org:org_teacher' course_org.id %}">查看更多 > </a>
         </div>
         {% for teacher in all_teachers %}
             <div class="diarys">
                 <div class="module5 share company-diary-box" style="padding:10px 0;">
                     <div class="left">
                         <img class="pic" src="{{ MEDIA_URL }}{{ teacher.image }}"/>
-                        <p>昵称：bobby</p>
+                        <p>昵称：{{ teacher.name }}</p>
                     </div>
                     <div class="right">
                         <div class="top">
@@ -55,7 +55,7 @@
     <div class="right companycenter layout">
         <div class="head">
             <h1>机构介绍</h1>
-            <a class="green fr more" href="org-detail-desc.html">查看更多 > </a>
+            <a class="green fr more" href="{% url 'org:org_desc' course_org.id %}">查看更多 > </a>
         </div>
         <div class="cont">&nbsp; &nbsp; {{ course_org.desc }}<a href="/company/desc/22/"><span
                 class="green">[查看更多]</span></a></div>
