--- a/templates/org_base.html
+++ b/templates/org_base.html
@@ -20,35 +20,43 @@
 <section class="headerwrap headerwrap2">
     <header>
         <div class="header2 header">
+            <div class="top">
+                <div class="wp">
+                    <div class="fl"><p>服务电话：<b>33333333</b></p></div>
+                    <!--登录后跳转-->
 
-            {% if request.user.is_authenticated %}
-                <div class="personal">
-                    <dl class="user fr">
-                        <dd>{{ user.name }}<img class="down fr" src="{% static 'images/top_down.png' %}"/></dd>
-                        <dt><img width="20" height="20" src="{{ MEDIA_URL }}{{ request.user.image }}"/></dt>
-                    </dl>
-                    <div class="userdetail">
-                        <dl>
-                            <dt><img width="80" height="80" src="{{ MEDIA_URL }}{{ request.user.image }}"/></dt>
-                            <dd>
-                                <h2>{{ request.user.nick_name }}</h2>
-                                <p>{{ request.user.username }}</p>
-                            </dd>
-                        </dl>
-                        <div class="btn">
-                            <a class="personcenter fl" href="{% url 'users:user_info' %}">进入个人中心</a>
-                            <a class="fr" href="">退出</a>
+                    {% if request.user.is_authenticated %}
+                        <div class="personal">
+                            <dl class="user fr">
+                                <dd>{{ user.name }}<img class="down fr" src="{% static 'images/top_down.png' %}"/></dd>
+                                <dt><img width="20" height="20" src="{{ MEDIA_URL }}{{ request.user.image }}"/></dt>
+                            </dl>
+                            <div class="userdetail">
+                                <dl>
+                                    <dt><img width="80" height="80" src="{{ MEDIA_URL }}{{ request.user.image }}"/></dt>
+                                    <dd>
+                                        <h2>{{ request.user.nick_name }}</h2>
+                                        <p>{{ request.user.username }}</p>
+                                    </dd>
+                                </dl>
+                                <div class="btn">
+                                    <a class="personcenter fl" href="{% url 'users:user_info' %}">进入个人中心</a>
+                                    <a class="fr" href="{% url 'logout' %}">退出</a>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <a href="usercenter-message.html">
-                    <div class="msg-num"><span id="MsgNum">{{ request.user.unread_nums }}</span></div>
-                </a>
+                        <a href="{% url 'users:mymessage' %}">
+                            <div class="msg-num"><span id="MsgNum">{{ request.user.unread_nums }}</span></div>
+                        </a>
 
-            {% else %}
-                <a style="color:white" class="fr registerbtn" href="{% url 'register' %}">注册</a>
-                <a style="color:white" class="fr loginbtn" href="{% url 'login' %}">登录</a>
-            {% endif %}
+                    {% else %}
+                        <a style="color:white" class="fr registerbtn" href="{% url 'register' %}">注册</a>
+                        <a style="color:white" class="fr loginbtn" href="{% url 'login' %}">登录</a>
+                    {% endif %}
+
+
+                </div>
+            </div>
 
 
             <div class="middle companyheader">
@@ -80,7 +88,7 @@
 <section>
     <div class="wp">
         <ul class="crumbs">
-            <li><a href="index.html">首页</a>></li>
+            <li><a href="{% url 'index' %}">首页</a>></li>
             <li><a href="{% url 'org:org_list' %}">课程机构</a>></li>
             <li>{% block page_path %}机构首页{% endblock %}</li>
         </ul>
