完成首页功能开发

--- a/templates/base.html
+++ b/templates/base.html
@@ -130,8 +130,8 @@
         </div>
         <p class="line"></p>
         <div class="wp clear">
-            <span class="fl">? 2016 www.projectsedu.com 慕学在线-在线学习交流平台 保留所有权利</span>
-            <span class="fr">copyright ? 2016 ICP备案证书号：蜀ICP备xxxxx号-1</span>
+            <span class="fl"> 2016 www.projectsedu.com 慕学在线-在线学习交流平台 保留所有权利</span>
+            <span class="fr">copyright  2016 ICP备案证书号：蜀ICP备xxxxx号-1</span>
         </div>
     </div>
 </footer>
