--- a/templates/org_base.html
+++ b/templates/org_base.html
@@ -65,7 +65,7 @@
                          src="{{ MEDIA_URL }}{{ course_org.image }}"/>
                     <div class="head fl">
                         <h1>
-                            慕课网
+                            {{ course_org.name }}
                             <img src="{% static 'images/authentication.png' %}"/>
                             <img src="{% static 'images/gold.png' %}"/>
                         </h1>
