完善HTML文件中的链接

--- a/templates/course-detail.html
+++ b/templates/course-detail.html
@@ -84,12 +84,12 @@
                             <p>世界名校，课程权威</p>
                         </div>
                         <div class="pic">
-                            <a href="/company/14/">
+                            <a href="{% url 'org:org_home' course.course_org.id %}">
                                 <img width="150" height="80" src="{{ MEDIA_URL }}{{ course.course_org.image }}"/>
                             </a>
                         </div>
-                        <a href="/company/14/">
-                            <h2 class="center" title="清华大学">{{ course.course_org.name }}</h2>
+                        <a href="{% url 'org:org_home' course.course_org.id %}">
+                            <h2 class="center" title="{{ course.course_org.name }}">{{ course.course_org.name }}</h2>
                         </a>
                         <div class="btn  notlogin
 					     " data-favid="14" id="jsRightBtn">
@@ -143,13 +143,13 @@
                         {% for relate_course in relate_courses %}
                             <dl>
                                 <dt>
-                                    <a target="_blank" href="">
+                                    <a target="_blank" href="{% url 'course:course_detail' relate_course.id %}">
                                         <img width="240" height="220" class="scrollLoading"
                                              src="{{ MEDIA_URL }}{{ relate_course.image }}"/>
                                     </a>
                                 </dt>
                                 <dd>
-                                    <a target="_blank" href=""><h2> {{ relate_course.name }}</h2></a>
+                                    <a target="_blank" href="{% url 'course:course_detail' relate_course.id %}"><h2> {{ relate_course.name }}</h2></a>
                                     <span class="fl">学习时长：<i class="key">{{ relate_course.learned_times }}</i></span>
                                 </dd>
                             </dl>
