--- a/templates/teachers-list.html
+++ b/templates/teachers-list.html
@@ -89,14 +89,14 @@
                 {% for hot_teacher in sorted_teachers %}
                     <dl class="des">
                         <span class="num fl">1</span>
-                        <a href="/diary/hk_detail/6/">
+                        <a href="{% url 'org:teacher_detail' hot_teacher.id %}">
                             <dt>
                                 <img width="50" height="50" class="scrollLoading"
                                      src="{{ MEDIA_URL }}{{ hot_teacher.image }}"/>
                             </dt>
                         </a>
                         <dd>
-                            <a href="/diary/hk_detail/6/">
+                            <a href="{% url 'org:teacher_detail' hot_teacher.id %}">
                                 <h1 title="{{ hot_teacher.name }}">{{ hot_teacher.name }}</h1>
                             </a>
                             <p>工作年限：<span>{{ hot_teacher.work_years }}</span></p>
